# eight

./: .gitignore  CMakeLists.txt  build.sh
src/: Board.cpp  Board.h  Main.cpp
